# autopaper

./: .gitignore  CLAUDE.md  README.md  README_zh.md  autopaper.example.toml  check_diff.py  paper.tex  program.md  pyproject.toml  reviewer.py
.autopaper/: working_memory.md
tests/: test_reviewer.py
